add m5stack support for core2

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,8 @@
 ; http://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = native
+default_envs = esp32-m5stack
+; default_envs = native
 
 ; Shared options
 [env]
@@ -19,7 +20,7 @@ build_flags =
   -I src
 lib_deps =
   ;lvgl=https://github.com/littlevgl/lvgl/archive/master.zip
-  lvgl
+  lvgl=https://github.com/lvgl/lvgl.git
 lib_archive = false
 
 
@@ -44,7 +45,7 @@ build_flags =
   -D USE_KEYBOARD
 lib_deps =
   ${env.lib_deps}
-  lv_drivers
+  lv_drivers=https://github.com/lvgl/lv_drivers.git
   ; lv_drivers=https://github.com/littlevgl/lv_drivers/archive/7d71907c1d6b02797d066f50984b866e080ebeed.zip
 src_filter =
   +<*>
@@ -68,3 +69,21 @@ lib_deps =
 src_filter =
   +<*>
   +<../hal/stm32f429_disco>
+
+[env:esp32-m5stack]
+platform = espressif32
+board = m5stack-core-esp32
+framework = arduino
+build_flags =
+  -D ESP32
+  ${env.build_flags}
+  
+  ; !python -c "import os; print(' '.join(['-I {}'.format(i[0].replace('\x5C','/')) for i in os.walk('hal/stm32f429_disco')]))"
+lib_deps =
+  ${env.lib_deps}
+  ; TFT_eSPI
+  ; m5stack
+  https://github.com/m5stack/M5Core2.git
+src_filter =
+  +<*>
+  +<../hal/m5stack>
