add working m5stack core2 with native support

--- a/platformio.ini
+++ b/platformio.ini
@@ -74,11 +74,14 @@ src_filter =
 platform = espressif32
 board = m5stack-core-esp32
 framework = arduino
+upload_speed = 921600
+monitor_speed = 115200
 build_flags =
-  -D ESP32
+  -D M5STACK
   ${env.build_flags}
+  -DCORE_DEBUG_LEVEL=4
   
-  ; !python -c "import os; print(' '.join(['-I {}'.format(i[0].replace('\x5C','/')) for i in os.walk('hal/stm32f429_disco')]))"
+  !python -c "import os; print(' '.join(['-I {}'.format(i[0].replace('\x5C','/')) for i in os.walk('hal/m5stack')]))"
 lib_deps =
   ${env.lib_deps}
   ; TFT_eSPI
